# taiwan_war_simulator

./: AGENTS.md  README.md  pyproject.toml
docs/design/: game_design_document.md  technical_design.md
docs/logs/: devlog.md
docs/narrative/: foreign_intervention_pool.md  foreign_intervention_variables.md  prc_resource_pool.md  strategic_variable_matrix.md  taiwan_defense_variables.md  taiwan_resource_pool.md  worldbuilding.md
docs/prompts/: codex_prompting.md
docs/tasks/: backlog.md
src/twsim/: cli.py  content.py  engine.py  models.py  visual_style.py
tests/deterministic/: test_replay_seed.py
tests/rules/: test_action_package.py  test_cli_visual_style_prompt.py  test_victory_rules.py  test_visual_style_prompt.py
tools/ai/: README.md
