[project]
name = "taiwan-war-simulator"
version = "0.1.0"
description = "Deterministic turn-based strategy CLI prototype"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
